k8s/dev/petition-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petition-api-deployment
  labels:
    app: petition-api
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petition-api
      env: dev
  template:
    metadata:
      labels:
        app: petition-api
        env: dev
    spec:
      containers:
        - name: petition-api
          image: ghcr.io/potato-club/petition-api-dev:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
