k8s/dev/petition-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petition-api-service
  labels:
    app: petition-api
    env: dev
spec:
  selector:
    app: petition-api
    env: dev
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
