k8s/dev/petition-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: petition-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: petition-service
              servicePort: 8080
